src/test/deca/context/invalid/expr_cast_null_to_float.deca
// Test of the rule (3.39) : can't cast null to float.

{
	float var1;
	null var2;
	var1 = (float)(var2);
}

// Résultat :
//# a
